fix(homepage): fixing generate button not woking on ios

--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -1,3 +1,6 @@
+a {
+    cursor: pointer;
+}
 .text {
     font-size: 24px;
     font-weight: bold;
